--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,41 @@
+@font-face {
+  font-family: 'Heebo';
+  src: url('fonts/Heebo-Regular.ttf') format('truetype');
+  font-display: swap;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Heebo';
+  src: url('fonts/Heebo-Light.ttf') format('truetype');
+  font-display: swap;
+  font-weight: 300;
+  font-style: light;
+}
+
+@font-face {
+  font-family: 'Heebo';
+  src: url('fonts/Heebo-Medium.ttf') format('truetype');
+  font-display: swap;
+  font-weight: 600;
+  font-style: medium;
+}
+
+@font-face {
+  font-family: 'Heebo';
+  src: url('fonts/Heebo-Bold.ttf') format('truetype');
+  font-display: swap;
+  font-weight: 700;
+  font-style: bold;
+}
+
+
+
+
 body {
   margin: 0;
-  font-family: "Heebo";
+  font-family: 'Heebo', sans-serif;
   padding-top: 80px;
 }
 
@@ -9,7 +44,9 @@ body {
   max-width: 90%;
   margin: auto;
   padding: 0 16px;
+  
 }
+
 
 ul {
   margin: 0;
@@ -17,8 +54,8 @@ ul {
 }
 
 header {
-  background-color: #fff;
-  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.15);
+  background-color: #FFF;
+  box-shadow: 0 1px 6px 0 rgba(0,0,0,0.15);
   height: 80px;
   position: fixed;
   top: 0;
@@ -72,7 +109,7 @@ header nav ul li.menu-icon img {
 }
 
 header nav ul li a {
-  color: #3e3e3e;
+  color: #3E3E3E;
   font-size: 15px;
   letter-spacing: 0.37px;
   margin-right: 24px;
@@ -116,7 +153,7 @@ section.hero img {
 
 .hero-content h1 {
   max-width: 495px;
-  color: #fff;
+  color: #FFF;
   font-size: 50px;
   letter-spacing: 1.25px;
   line-height: 56px;
@@ -127,7 +164,7 @@ section.hero img {
 
 .hero-content p {
   max-width: 518px;
-  color: #fff;
+  color: #FFF;
   font-weight: 300;
   font-size: 20px;
   letter-spacing: 0.5px;
@@ -136,28 +173,30 @@ section.hero img {
   margin-top: 0;
 }
 
+
 .hero-content button {
   height: 50px;
   width: 220px;
   max-width: 100%;
   border-radius: 92px;
   background-color: #33c6dd;
-  color: #fff;
+  color: #FFF;
   font-size: 16px;
   font-weight: 700;
   letter-spacing: 0.4px;
   line-height: 24px;
-  text-align: center;
-  border: none;
+  text-align: center;  
+  border: none;  
   text-transform: uppercase;
   cursor: pointer;
 }
 
 .hero-content button:hover {
   color: #33c6dd;
-  background-color: #fff;
+  background-color: #FFF;
   border: 1px solid #33c6dd;
 }
+
 
 section.country-bar {
   display: flex;
@@ -197,11 +236,12 @@ section.best-sellers .container {
   padding: 0 8px;
   flex-wrap: wrap;
   box-sizing: border-box;
+  
 }
 
 section.best-sellers .product-slider .product {
   border-radius: 8px;
-  border: 1px solid #ddd;
+  border: 1px solid #DDD;
   width: 30%;
   box-sizing: border-box;
   text-align: center;
@@ -213,6 +253,7 @@ section.best-sellers .product-slider .product {
   justify-content: space-between;
   cursor: pointer;
 }
+
 
 section.best-sellers .product-slider .product img {
   max-width: 40%;
@@ -232,7 +273,7 @@ section.best-sellers .product-slider .product.new::before {
   position: absolute;
   top: 12px;
   right: 12px;
-  color: #fff;
+  color: #FFF;
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 0.35px;
@@ -265,6 +306,7 @@ section.best-sellers .product-slider .product .product-info .title {
   margin-bottom: 6px;
   font-weight: normal;
   margin-top: 0;
+  
 }
 
 section.best-sellers .product-slider .product .product-info .price {
@@ -276,22 +318,12 @@ section.best-sellers .product-slider .product .product-info .price {
   margin-top: 0;
 }
 
-section.best-sellers
-  .product-slider
-  .product
-  .product-info
-  .price
-  .discounted-price {
-  color: #ec1c1c;
+section.best-sellers .product-slider .product .product-info .price .discounted-price {
+  color: #EC1C1C;
 }
 
-section.best-sellers
-  .product-slider
-  .product
-  .product-info
-  .price
-  .original-price {
-  color: #9b9b9b;
+section.best-sellers .product-slider .product .product-info .price .original-price {
+  color: #9B9B9B;
   font-weight: normal;
   font-size: 16px;
   letter-spacing: 0.4px;
@@ -319,8 +351,9 @@ section.best-sellers .product-slider .product:hover .product-info button {
   color: white;
 }
 
+
 section.newsletter {
-  background-color: rgba(200, 200, 200, 0.18);
+  background-color: rgba(200,200,200,0.18);
   max-width: 955px;
   text-align: center;
   padding: 72px 0;
@@ -355,9 +388,9 @@ section.newsletter form input {
   max-width: 80%;
   border-radius: 60px 0 0 60px;
   box-sizing: border-box;
-  border: 1px solid #3e3e3e;
+  border: 1px solid #3E3E3E;
   border-right: none;
-  color: #3e3e3e;
+  color: #3E3E3E;
   font-family: Heebo;
   font-size: 14px;
   letter-spacing: 0.35px;
@@ -373,24 +406,26 @@ section.newsletter form button {
   border-radius: 0 60px 60px 0;
   background-color: #614dc9;
   border: 1px solid #614dc9;
-  color: #fff;
+  color: #FFF;
   font-size: 14px;
   letter-spacing: 0.35px;
   line-height: 21px;
   text-transform: uppercase;
   cursor: pointer;
+
 }
 
 section.newsletter form button:hover {
   color: #614dc9;
   border: 1px solid #614dc9;
-  background-color: #fff;
-  border: 1px solid #3e3e3e;
+  background-color: #FFF;
+  border: 1px solid #3E3E3E;
 }
+
 
 footer .bottom-nav {
   padding: 60px 0;
-  background-color: #3e3e3e;
+  background-color: #3E3E3E;
 }
 
 footer .bottom-nav .container {
@@ -404,7 +439,7 @@ footer .bottom-nav ul {
 }
 
 footer .bottom-nav ul li a {
-  color: #e0e0e0;
+  color: #E0E0E0;
   font-size: 16px;
   letter-spacing: 0.4px;
   line-height: 22px;
@@ -425,12 +460,12 @@ footer .bottom-nav ul li.list-title {
   line-height: 26px;
   margin-top: 0;
   margin-bottom: 20px;
-  color: #fff;
+  color: #FFF;
 }
 
 footer .copyright-text {
   color: white;
-  background-color: #2b2b2b;
+  background-color: #2B2B2B;
   height: 60px;
   display: flex;
   align-items: center;
@@ -440,272 +475,276 @@ footer .copyright-text {
   line-height: 22px;
 }
 
+
 /* **********************************
 ******  CSS MEDIA QUERIES ********* 
 ************************************/
 
+
 /* Start of Design for Tablets */
 @media screen and (max-width: 960px) {
+
   .container {
-    max-width: 92%;
+      max-width: 92%;
   }
 
   header .logo {
-    font-size: 24px;
+      font-size: 24px;
   }
 
   header nav ul li {
-    display: none;
+      display: none;
   }
-
+  
   header nav ul li.menu-icon {
-    display: inline-block;
+      display: inline-block;
   }
 
   .hero-content h1 {
-    font-size: 40px;
-    letter-spacing: 1px;
-    line-height: 46px;
+      font-size: 40px;
+      letter-spacing: 1px;
+      line-height: 46px;
   }
-
+  
   .hero-content p {
-    font-size: 16px;
-    letter-spacing: 0.4px;
-    line-height: 24px;
+      font-size: 16px;
+      letter-spacing: 0.4px;
+      line-height: 24px;
   }
-
+  
   .hero-content button {
-    font-size: 14px;
-    letter-spacing: 0.35px;
-    line-height: 21px;
-    width: 196px;
+      font-size: 14px;
+      letter-spacing: 0.35px;
+      line-height: 21px;
+      width: 196px;
+      
   }
 
   section.best-sellers {
-    padding-top: 50px;
+      padding-top: 50px;
   }
-
+  
   section.best-sellers h1 {
-    font-size: 28px;
-    letter-spacing: 0.7px;
-    line-height: 38px;
-    margin: 0 0 12px 0;
+      font-size: 28px;
+      letter-spacing: 0.7px;
+      line-height: 38px;
+      margin: 0 0 12px 0;
   }
 
   section.best-sellers .product-slider {
-    margin-top: 48px;
+      margin-top: 48px;
   }
 
   section.best-sellers .container {
-    flex-wrap: wrap;
-    justify-content: center;
+      flex-wrap: wrap;
+      justify-content: center;
   }
 
   section.best-sellers .product-slider .product {
-    min-width: 220px;
-    margin: 17px 8px;
+      min-width: 220px; 
+      margin: 17px 8px;
   }
 
   section.best-sellers .product-slider .product .product-info .categories {
-    font-size: 12px;
-    letter-spacing: 0.3px;
-    line-height: 30px;
-    margin-bottom: 5px;
+      font-size: 12px;
+      letter-spacing: 0.3px;
+      line-height: 30px;
+      margin-bottom: 5px;
   }
-
+  
   section.best-sellers .product-slider .product .product-info .title {
-    font-size: 13px;
-    letter-spacing: 0.5px;
-    line-height: 18px;
-    margin-bottom: 8px;
+      font-size: 13px;
+      letter-spacing: 0.5px;
+      line-height: 18px;
+      margin-bottom: 8px;
   }
-
+  
   section.best-sellers .product-slider .product .product-info .price {
-    font-size: 16px;
-    letter-spacing: 0.4px;
-    line-height: 30px;
+      font-size: 16px;
+      letter-spacing: 0.4px;
+      line-height: 30px;
   }
-
-  section.best-sellers
-    .product-slider
-    .product
-    .product-info
-    .price
-    .original-price {
-    font-size: 9px;
-    letter-spacing: 0.23px;
-    line-height: 30px;
-    display: block;
-    line-height: 14px;
+  
+  section.best-sellers .product-slider .product .product-info .price .original-price {
+      font-size: 9px;
+      letter-spacing: 0.23px;
+      line-height: 30px;
+      display: block;
+      line-height: 14px;
   }
-
+  
   section.best-sellers .product-slider .product .product-info button {
-    height: 36px;
-    width: 193px;
-    font-size: 12px;
-    letter-spacing: 0.3px;
-    line-height: 18px;
+      height: 36px;
+      width: 193px;
+      font-size: 12px;
+      letter-spacing: 0.3px;
+      line-height: 18px;
   }
 
   section.best-sellers .product-slider .product.new::before {
-    font-size: 11px;
-    font-weight: 700;
-    letter-spacing: 0.27px;
-    padding: 0px 12px;
+      font-size: 11px;
+      font-weight: 700;
+      letter-spacing: 0.27px;
+      padding: 0px 12px;
   }
 
   section.newsletter {
-    width: 100%;
-    max-width: 100%;
-    padding: 50px 0;
-    margin: 50px auto;
+      width: 100%;
+      max-width: 100%;
+      padding: 50px 0;
+      margin: 50px auto;
   }
-
+  
   section.newsletter h3 {
-    font-size: 22px;
-    letter-spacing: 0.55px;
-    line-height: 42px;
+      font-size: 22px;
+      letter-spacing: 0.55px;
+      line-height: 42px;
   }
-
+  
   section.newsletter p {
-    font-size: 14px;
-    letter-spacing: 0.35px;
-    line-height: 42px;
+      font-size: 14px;
+      letter-spacing: 0.35px;
+      line-height: 42px;
   }
 
   footer .bottom-nav {
-    padding: 50px 0;
+      padding: 50px 0;
   }
-
+  
   footer .bottom-nav .container {
-    max-width: 90%;
+      max-width: 90%;
   }
+  
+
 }
 /* End of Design for Tablets */
 
 /* Start of Design for Mobile Phones */
 @media screen and (max-width: 576px) {
+
   header .logo {
-    font-size: 18px;
+      font-size: 18px;
   }
 
   header .logo .blue-dot {
-    width: 7px;
-    height: 7px;
+      width: 7px;
+      height: 7px;
   }
 
   .hero-content {
-    position: static;
-    margin-bottom: 40px;
+      position: static;
+      margin-bottom: 40px;
   }
 
   .hero-content h1 {
-    color: #000;
-    font-size: 32px;
-    letter-spacing: 0.8px;
-    line-height: 38px;
-    text-align: center;
-    margin-bottom: 32px;
-    margin-top: 27px;
+      color: #000;
+      font-size: 32px;
+      letter-spacing: 0.8px;
+      line-height: 38px;
+      text-align: center;
+      margin-bottom: 32px;
+      margin-top: 27px;
   }
-
+  
   .hero-content p {
-    display: none;
+      display: none;
   }
-
+  
   .hero-content button {
-    font-size: 14px;
-    letter-spacing: 0.35px;
-    line-height: 21px;
-    width: 196px;
-    margin: auto;
+      font-size: 14px;
+      letter-spacing: 0.35px;
+      line-height: 21px;
+      width: 196px;
+      margin: auto;
+      
   }
 
   section.best-sellers {
-    padding-top: 64px;
+      padding-top: 64px;
   }
-
+  
   section.best-sellers .product-slider .product {
-    width: 82%;
-    max-width: 360px;
+      width: 82%;
+      max-width: 360px;
   }
 
   section.best-sellers h1 {
-    font-size: 36px;
-    letter-spacing: 0.6px;
-    line-height: 38px;
-    margin: 0 0 16px 0;
+      font-size: 36px;
+      letter-spacing: 0.6px;
+      line-height: 38px;
+      margin: 0 0 16px 0;
   }
 
   section.best-sellers hr {
-    border-top: 4px solid #33c6dd;
-    width: 40px;
+      border-top: 4px solid #33c6dd;
+      width: 40px;
   }
 
   section.best-sellers .product-slider {
-    margin-top: 42px;
+      margin-top: 42px;
   }
-
+  
   section.best-sellers .product-slider .product .product-info .categories {
-    margin-bottom: 7px;
+      margin-bottom: 7px;
   }
-
+  
   section.best-sellers .product-slider .product .product-info .title {
-    font-size: 14px;
-    letter-spacing: 0.54px;
-    line-height: 18px;
+      font-size: 14px;
+      letter-spacing: 0.54px;
+      line-height: 18px;
   }
-
+  
   section.best-sellers .product-slider .product .product-info .price {
-    font-size: 20px;
-    font-weight: 700;
-    letter-spacing: 0.5px;
+      font-size: 20px;
+      font-weight: 700;
+      letter-spacing: 0.5px;
   }
-
-  section.best-sellers
-    .product-slider
-    .product
-    .product-info
-    .price
-    .original-price {
-    font-size: 11px;
-    letter-spacing: 0.28px;
-    line-height: 20px;
+  
+  section.best-sellers .product-slider .product .product-info .price .original-price {
+      font-size: 11px;
+      letter-spacing: 0.28px;
+      line-height: 20px;
   }
-
+  
   section.best-sellers .product-slider .product .product-info button {
-    height: 36px;
-    width: 146px;
-    font-size: 12px;
-    letter-spacing: 0.3px;
-    line-height: 18px;
+      height: 36px;
+      width: 146px;
+      font-size: 12px;
+      letter-spacing: 0.3px;
+      line-height: 18px;
   }
 
   section.newsletter {
-    padding: 44px 0;
-    margin: 60px auto;
+      padding: 44px 0;
+      margin: 60px auto;
   }
 
   section.newsletter form input {
-    max-width: 65%;
+      max-width: 65%;
   }
-
+  
   section.newsletter form button {
-    max-width: 35%;
+      max-width: 35%;
   }
 
   footer .bottom-nav .container {
-    flex-direction: column;
-    align-items: center;
+      flex-direction: column;
+      align-items: center;
   }
 
   footer .bottom-nav ul {
-    text-align: center;
-    margin-bottom: 32px;
+      text-align: center;
+      margin-bottom: 32px;
   }
 
   footer .bottom-nav ul:last-of-type {
-    margin-bottom: 0;
+      margin-bottom: 0;
   }
+
+ 
+
+
 }
 /* End of Design for Mobile Phones */
+
+
